--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,8 @@ html {
   width: 100%;
   height: 100%;
   --glowcolor: #1bc7fb;
+  --detective-primary: #d10c0c;
+  --detective-secondary: #5e0b0b;
 }
 
 .t1 {
@@ -20,12 +22,10 @@ html {
 }
 
 .t2 {
-  grid-row: 4/6;
+  grid-row: 5/6;
   grid-column: 2 / 3;
   margin-right: auto;
   margin-left: auto;
-  justify-self: center;
-  align-self: center;
   width: clamp(360px, 80%, 400px);
   display: flex;
   flex-direction: row;
@@ -56,10 +56,9 @@ html {
   margin-right: auto;
   grid-row: 2/3;
   grid-column: 2/3;
-  justify-self: center;
-  align-self: center;
   filter: drop-shadow(0 1px 3px);
   font-size: 4em;
+  height: fit-content;
 }
 
 .layers {
@@ -581,4 +580,102 @@ html {
 .nav-item:hover::after {
   transform: scaleX(1);
   transform-origin: bottom left;
+}
+
+.detective-card {
+  background: #0a0a0a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-column: 2/3;
+  grid-row: 2/5;
+  margin-top: 20vh;
+  height: 40vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+  border: 2px solid #ffffff;
+  transition: 0.5s all;
+  opacity: 1;
+  background-size: 14px 14px;
+  background-image: repeating-linear-gradient(
+    0deg,
+    var(--detective-secondary),
+    var(--detective-secondary) 0.7000000000000001px,
+    #000000 0.7000000000000001px,
+    #000000
+  );
+  color: var(--detective-primary);
+  font-size: 1.1em;
+}
+
+.detective-card:hover {
+  box-shadow: 0 0 35px var(--detective-primary);
+  scale: 1.05;
+}
+
+.detective-details {
+  height: fit-content;
+  width: fit-content;
+}
+
+.detective-details ul {
+  list-style-type: disc;
+  justify-self: center;
+  align-self: center;
+  margin-left: 2em;
+  width: fit-content;
+}
+.detective-details ul li {
+  margin-top: 0.25em;
+}
+
+.org-container {
+  display: flex;
+}
+
+.detective-image {
+  justify-self: center;
+  align-self: center;
+}
+
+.leaderboard {
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  grid-template-rows: 1fr;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
+
+.playbtn-container {
+  grid-column: 2/3;
+  grid-row: 5/6;
+  display: flex;
+  justify-content: center;
+  font-size: 2em;
+}
+.playbtn {
+  border: 2px solid #ffffff;
+  height: fit-content;
+  padding: 0.2em 1.5em;
+  z-index: 3;
+  position: relative;
+  color: white;
+  transition: 0.5s;
+}
+.playbtn::before {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  background: #000000;
+  z-index: -1;
+}
+
+.playbtn:hover {
+  letter-spacing: 0.2em;
+  box-shadow: 0 0 35px var(--detective-primary);
+  border: 2px solid var(--detective-primary);
+  color: var(--detective-primary);
 }
