--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -643,7 +643,7 @@ html {
   display: flex;
   flex-direction: column;
 
-  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-color: black;
   color: white;
